# Y

./: README.md  run.py
common/libs/: CMakeLists.txt
common/libs/CudaError/: CMakeLists.txt
common/libs/Dvfs/: CMakeLists.txt
common/libs/Vector/: CMakeLists.txt
env/: .env  export_env.sh
programs/BFS/ALGORITHM/: CMakeLists.txt  build.sh
programs/BFS/ALGORITHM/BFS/: CMakeLists.txt
programs/BFS/ALGORITHM/BFS/src/: bfs.cc
programs/BFS/BENCHMARK/: CMakeLists.txt
programs/BFS/BENCHMARK/BFS/: CMakeLists.txt
programs/BFS/BENCHMARK/BFS/margot/: margot.json  ops.json
programs/BFS/BENCHMARK/BFS/src/: bfs.cc
programs/BFS/CONFIG/: CMakeLists.txt
programs/BFS/CONTROLLER/: CMakeLists.txt
programs/BFS/CONTROLLER/BFS/: CMakeLists.txt
programs/BFS/CONTROLLER/BFS/src/: bfs.cc
programs/BFS/PROFILING/: CMakeLists.txt
programs/BFS/PROFILING/BFS/: CMakeLists.txt
programs/BFS/PROFILING/BFS/margot/: margot.json
programs/BFS/PROFILING/BFS/src/: bfs.cc
programs/CUTCP/ALGORITHM/: CMakeLists.txt  build.sh
programs/CUTCP/ALGORITHM/CUTCP/: CMakeLists.txt
programs/CUTCP/ALGORITHM/CUTCP/src/: cutcp.cc
programs/CUTCP/BENCHMARK/: CMakeLists.txt
programs/CUTCP/BENCHMARK/CUTCP/: CMakeLists.txt
programs/CUTCP/BENCHMARK/CUTCP/margot/: ops.json
programs/CUTCP/BENCHMARK/CUTCP/src/: cutcp.cc
programs/CUTCP/CONFIG/: CMakeLists.txt
programs/CUTCP/CONTROLLER/: CMakeLists.txt
programs/CUTCP/GPU_INTERFERENCE/: CMakeLists.txt
programs/CUTCP/GPU_INTERFERENCE/CUTCP/: CMakeLists.txt
programs/CUTCP/GPU_INTERFERENCE/CUTCP/src/: cutcp.cc
programs/CUTCP/GPU_POWER/CUTCP/: CMakeLists.txt
programs/CUTCP/GPU_POWER/CUTCP/src/: cutcp.cc
programs/CUTCP/INTERFERENCE/: CMakeLists.txt
programs/CUTCP/INTERFERENCE/CUTCP/: CMakeLists.txt
programs/CUTCP/INTERFERENCE/CUTCP/src/: cutcp.cc
programs/CUTCP/PROFILING/: CMakeLists.txt  clean.sh
programs/CUTCP/PROFILING/CUTCP/: CMakeLists.txt
programs/CUTCP/PROFILING/CUTCP/margot/: margot.json
programs/CUTCP/PROFILING/CUTCP/src/: cutcp.cc
programs/DUMMY/ALGORITHM/: CMakeLists.txt  build.sh
programs/DUMMY/ALGORITHM/DUMMY/: CMakeLists.txt
programs/DUMMY/ALGORITHM/DUMMY/src/: dummy.cc
programs/DUMMY/BENCHMARK/: CMakeLists.txt  build.sh
programs/DUMMY/BENCHMARK/DUMMY/: CMakeLists.txt
programs/DUMMY/BENCHMARK/DUMMY/src/: dummy.cc
programs/DUMMY/CONTROLLER/: CMakeLists.txt
programs/DUMMY/CONTROLLER/DUMMY/: CMakeLists.txt
programs/DUMMY/CONTROLLER/DUMMY/src/: dummy.cc
programs/DUMMY/GPU_INTERFERENCE/DUMMY/: CMakeLists.txt
programs/DUMMY/GPU_INTERFERENCE/DUMMY/src/: dummy.cc
programs/DUMMY/INTERFERENCE/: CMakeLists.txt
programs/HISTO/ALGORITHM/: CMakeLists.txt
programs/HISTO/ALGORITHM/HISTO/: CMakeLists.txt
programs/HISTO/ALGORITHM/HISTO/src/: histo.cc
programs/HISTO/CONFIG/: CMakeLists.txt
programs/HISTO/CONFIG/HISTO/: CMakeLists.txt
programs/HISTO/CONFIG/HISTO/src/: histo.cc
programs/HISTO/CONTROLLER/: CMakeLists.txt
programs/HISTO/CONTROLLER/HISTO/: CMakeLists.txt
programs/HISTO/CONTROLLER/HISTO/src/: histo.cc
programs/HISTO/GPU_POWER/: CMakeLists.txt
programs/HISTO/GPU_POWER/HISTO/: CMakeLists.txt
programs/HISTO/GPU_POWER/HISTO/src/: histo.cc
programs/HISTO/MARGOT/: CMakeLists.txt
programs/HISTO/MARGOT/HISTO/: CMakeLists.txt
programs/HISTO/MARGOT/HISTO/margot/: margot.json
programs/HISTO/MARGOT/HISTO/src/: histo.cc
programs/HISTO/MARGOT_KNOWLEDGE/: CMakeLists.txt
programs/HISTO/MARGOT_KNOWLEDGE/HISTO/: CMakeLists.txt
programs/HISTO/MARGOT_KNOWLEDGE/HISTO/src/: histo.cc
programs/HISTO/MARGOT_KNOWLEDGE_2/: CMakeLists.txt
programs/HISTO/MARGOT_KNOWLEDGE_2/HISTO/: CMakeLists.txt
programs/HISTO/MARGOT_KNOWLEDGE_2/HISTO/margot/: margot.json
programs/HISTO/MARGOT_KNOWLEDGE_2/HISTO/src/: histo.cc
programs/HISTO/MARGOT_KNOWLEDGE_3/: CMakeLists.txt
programs/HISTO/MARGOT_KNOWLEDGE_3/HISTO/: CMakeLists.txt
programs/HISTO/MARGOT_KNOWLEDGE_3/HISTO/src/: histo.cc
programs/HISTO/MARGOT_ONLY/: CMakeLists.txt  build.sh
programs/NBODY/ALGORITHM/: CMakeLists.txt  build.sh
programs/NBODY/ALGORITHM/NBODY/: CMakeLists.txt
programs/NBODY/ALGORITHM/NBODY/src/: nbody.cc
programs/NBODY/BENCHMARK/: CMakeLists.txt  build.sh
programs/NBODY/BENCHMARK/NBODY/: CMakeLists.txt
programs/NBODY/BENCHMARK/NBODY/margot/: margot.json  ops.json
programs/NBODY/BENCHMARK/NBODY/src/: nbody.cc
programs/NBODY/CONFIG/: CMakeLists.txt
programs/NBODY/CONFIG/NBODY/: CMakeLists.txt
programs/NBODY/CONTROLLER/: CMakeLists.txt
programs/NBODY/CONTROLLER/NBODY/: CMakeLists.txt
programs/NBODY/CONTROLLER/NBODY/src/: nbody.cc
programs/NBODY/GPU_INTERFERENCE/: CMakeLists.txt
programs/NBODY/GPU_INTERFERENCE/NBODY/: CMakeLists.txt
programs/NBODY/GPU_INTERFERENCE/NBODY/src/: nbody.cc
programs/NBODY/GPU_POWER/: CMakeLists.txt
programs/NBODY/GPU_POWER/NBODY/: CMakeLists.txt
programs/NBODY/GPU_POWER/NBODY/src/: nbody.cc
programs/NBODY/INTERFERENCE/: CMakeLists.txt
programs/NBODY/INTERFERENCE/NBODY/: CMakeLists.txt
programs/NBODY/INTERFERENCE/NBODY/src/: nbody.cc
programs/NBODY/MARGOT/: CMakeLists.txt
programs/NBODY/MARGOT-PROFILING/: CMakeLists.txt
programs/NBODY/MARGOT_KNOWLEDGE/: CMakeLists.txt
programs/NBODY/MARGOT_KNOWLEDGE_3/: CMakeLists.txt  build.sh
programs/NBODY/PROFILING/: CMakeLists.txt  build.sh  clean.sh
programs/NBODY/common/: CMakeLists.txt
programs/SGEMM/ALGORITHM/: CMakeLists.txt
programs/SGEMM/BENCHMARK/: CMakeLists.txt  build.sh
programs/SGEMM/CONFIG/: CMakeLists.txt
programs/SGEMM/CONTROLLER/: CMakeLists.txt
programs/SGEMM/GPU_INTERFERENCE/: CMakeLists.txt
programs/SGEMM/GPU_POWER/: CMakeLists.txt
programs/SGEMM/INTERFERENCE/: CMakeLists.txt
programs/SGEMM/MARGOT/: CMakeLists.txt  build.sh
programs/SGEMM/MARGOT_KNOWLEDGE/: CMakeLists.txt  build.sh
programs/SGEMM/MARGOT_KNOWLEDGE_2/: CMakeLists.txt
programs/SGEMM/MARGOT_KNOWLEDGE_3/: CMakeLists.txt
programs/SGEMM/PROFILING/: CMakeLists.txt
programs/SHA/ALGORITHM/: CMakeLists.txt
programs/SHA/CPU_POWER/: CMakeLists.txt
programs/SHA/POWER/: CMakeLists.txt
(+230 files in other folders)
